Use Process.pid() instead of reflection in LocalExecutionHelper.getProcessID
Avoids requiring --add-opens java.base/java.lang=ALL-UNNAMED on JDK 9+;
works cleanly on every JDK from 9 up. Adds test coverage and bumps the
changelog to 3.0.1.

Signed-off-by: Ehsan Rakhshankhah <ehsan.rakhshankhah@dkfz-heidelberg.de>